# STAD

./: .gitignore  README.md  comms.cpp  comms.h  config.cfg  main.cpp  p5_backup.txt  rfcomm-client-loopandstruct.c  rfcomm-server-loopandstruct.c  test.cpp
UAV_sw/: .gitignore  README.md
UAV_sw/PX4-Autopilot/: README.md
UAV_sw/UAV_sw/MAVSDK/: README.md
UAV_sw/UAV_sw/glfw/: README.md
UAV_sw/UAV_sw/uav/gui/src/: main.cpp  win_commands.h  win_controller.cpp  win_controller.h  win_kinematics.cpp  win_kinematics.h
UAV_sw/UAV_sw/uav/main/src/: kinematics.cpp  kinematics.h  main.cpp
UAV_sw/UAV_sw/uav/shared/uav/: udp.cpp
UAV_sw/UAV_sw/uav_ros2_ws/src/uav_cpp/: CMakeLists.txt
UAV_sw/UAV_sw/uav_ros2_ws/src/uav_cpp/src/uav_main/: PID.cpp  PID.h  kinematics.h  main.cpp
UAV_sw/UAV_sw/uav_ros2_ws/src/uav_msgs/: CMakeLists.txt  package.xml
UAV_sw/UAV_sw/uav_ros2_ws/src/uav_msgs/msg/: ArmedHeartbeat.msg  ControlInput.msg  ControlMode.msg
UAV_sw/UAV_sw/uav_ros2_ws/src/uav_py/: package.xml  setup.py
UAV_sw/imgui/: README.md
UAV_sw/uav/gui/: CMakeLists.txt  README.md  imgui.ini
UAV_sw/uav/gui/src/: gui.cpp  gui.h  win_commands.cpp
UAV_sw/uav/main/: CMakeLists.txt  README.md
UAV_sw/uav/main/src/: mav_util.h
UAV_sw/uav/shared/uav/: msgs.h  udp.h
UAV_sw/uav_ros2_ws/: imgui.ini
UAV_sw/uav_ros2_ws/src/uav_cpp/: CMakeLists.txt  package.xml
UAV_sw/uav_ros2_ws/src/uav_cpp/src/uav_gui/: main.cpp  win_commands.cpp  win_commands.h  win_controller.cpp  win_controller.h  win_kinematics.cpp  win_kinematics.h
UAV_sw/uav_ros2_ws/src/uav_cpp/src/uav_gui/imgui/: README.md
UAV_sw/uav_ros2_ws/src/uav_cpp/src/uav_main/: kinematics.cpp  kinematics.h  main.cpp  mav_util.cpp  vision.h
UAV_sw/uav_ros2_ws/src/uav_msgs/: CMakeLists.txt
UAV_sw/uav_ros2_ws/src/uav_msgs/msg/: ArmAck.msg  Disarm.msg  Kinematics.msg  Vision.msg
UAV_sw/uav_ros2_ws/src/uav_py/: setup.cfg  setup.py
UAV_sw/uav_ros2_ws/src/uav_py/uav_py/: vision_node.py
UGV_sw/Drive PX2/camera_sample/: CMakeLists.txt  CameraInterface.hpp  README.md  main.cpp
communication/: Makefile  README.md  comms.cpp  comms.h  main.cpp
documentation/Guides/: Nvidia Drive PX2 development environment setup.docx
documentation/guides/UAV/: GLFW.md  MAVSDK.md  Micro-XRCE-DDS-Agent.md  OAK-D camera setup.md  README.md  Ricoh Theta X 360 degree camera setup.docx  Simulation.md  bluetooth.md  code.md  ros2.md  test.md  vision algorithm.md
documentation/guides/UAV/ros2/: ros2 installation guide.md
documentation/guides/UGV/: Nvidia Drive PX2 development environment setup.docx  UGV ITX setup guide.docx  Wireless PS4 controller setup.docx
drone_ros_structure/: readme.txt
drone_ros_structure/drone/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
drone_ros_structure/drone/install/cpppkg/share/cpppkg/: local_setup.dsv  local_setup.sh  package.bash  package.sh
drone_ros_structure/drone/install/pythonpkg/share/pythonpkg/: package.bash  package.ps1  package.sh  package.zsh
drone_ros_structure/drone/log/: latest_build
drone_ros_structure/drone/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
drone_ros_structure/drone/src/install/cpppkg/lib/cpppkg/: drone_imu
drone_ros_structure/drone/src/install/cpppkg/share/cpppkg/: package.dsv  package.ps1  package.sh  package.zsh
drone_ros_structure/drone/src/install/pythonpkg/lib/pythonpkg/: camera_node  flight_controller_node
drone_ros_structure/drone/src/install/pythonpkg/share/pythonpkg/: package.dsv  package.sh
drone_ros_structure/drone/src/log/: latest_build
drone_ros_structure/drone/src/pythonpkg/: package.xml
drone_ros_structure/drone/src/pythonpkg/pythonpkg/: camera_node.py  flight_controller_node.py
follow_husky/: main.py
lidar/: README.md
lidar/app/: Makefile
lidar/app/ultra_simple/: main.cpp
src/cpppkg/: CMakeLists.txt  package.xml
src/cpppkg/src/: drone_imu.cpp
src/pythonpkg/: setup.cfg  setup.py
